# exercises

./: README.md
DynamicClassLoading/: Base.cpp  Base.h  Makefile  Module1.cpp  Module1.h  Module2.cpp  Module2.h  main.cpp
Euler/p1/: p1.py
Euler/p2/: p2.py
Euler/p3/: p3.py
Euler/p4/: p4.py
Euler/p5/: p5.py
airflow/: pyproject.toml
angular2/app/: app.component.js  app.component.ts  app.module.ts
boto/: pyproject.toml
celery/: Vagrantfile  pyproject.toml  tasks.py
cuda/: atomics.cu  ex1.cu  ex2.cu  ex3-again.cu  ex3.cu  ex4.cu
cuda/mandelbrot/: mandelbrot.cu
cuda/mandelbrot-threads/: mandelbrot.ptx
cuda/syncro/: syncro.cu
datastructs/trees/: BSTree.py  TTree.py
ext2/: ext2.py
graphstore-experiment/: setup.py
graphstore-experiment/functionaltests/: test.py
graphstore-experiment/graphstore/: x.py
graphstore-experiment/graphstore/_graphstore/: Formatter.py  GraphStore.py  GraphStoreIface.py
graphstore-experiment/graphstore/_graphstore/backends/memory/: Database.py  Graph.py  Infoset.py
hdf5/: chunk.f90  pippo.f90  pippo2.f90  pippo3.f90  pippo4.f90
kubernetes/: redis-config
mpi/broadcast/: broadcast.f90
mpi/create_communicator/: create_communicator.f90
mpi/ex1/: ex1.f90
mpi/ex2/: ex2.f90
mpi/reduce/: reduce.f90
multiple_dispatch/: multiple_dispatch.py
openmp/ex1/: ex1.f90
openmp/ex2/: ex-x.f90  ex2.f90
openmp/ex3/: ex3.f90
quicksorting/: test.py  test2.py
react/my-app/: package-lock.json
segfault/: segfault.c
terraform/: test.tf  variables.tf
vagrant/gitlab/: Vagrantfile
(+19 files in other folders)
