[tool.poetry]
name = "botoexercise"
version = "0.1.0"
description = ""
authors = ["Stefano Borini <stefano.borini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
