[tool.poetry]
name = "celerytest"
version = "0.1.0"
description = ""
authors = ["Stefano Borini <stefano.borini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = "^4.3"
redis = "^3.2"
rabbitmq = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
